flux/apps/home-assistant/music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-svc
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: music-assistant
  ports:
    - name: http
      port: 443
      protocol: TCP
      targetPort: 443
