flux/apps/home-assistant/music-assistant/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
  namespace: home-assistant
  annotations:
    external-dns.kubernetes.io/ttl: "300"
spec:
  parentRefs:
    - name: traefik
      namespace: kube-system
      kind: Gateway
      sectionName: websecure
  hostnames:
    - music.home.h3rmt.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: music-assistant-svc
          namespace: home-assistant
          port: 8095

---

# music assistant doesn't allow for domain, only ip
# using host port instead

# apiVersion: gateway.networking.k8s.io/v1alpha2
# kind: TCPRoute
# metadata:
#   name: music-assistant-tcp
#   namespace: home-assistant
# spec:
#   parentRefs:
#     - name: traefik
#       namespace: kube-system
#       kind: Gateway
#       sectionName: music-assistant
#   rules:
#     - backendRefs:
#         - name: music-assistant-svc
#           namespace: home-assistant
#           port: 8097
